added index.html and added backend logic and added results.html. currentl there is an error which has to be fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
     <title>Moodify</title>
 </head>
 <body>
-    <h1>Welcome to Moodify!</h1>
-    <p>This is a test page.</p>
+    <form action="/" method = "POST">
+        <label for="m">Enter your mood:</label>
+        <input type="text" id="m" name = "mood"> <br><br>
+        <input type="submit" value = "Submit">
+    </form>    
 </body>
 </html>
