--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Moodify</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <form action="/" method = "POST">
@@ -9,5 +10,6 @@
         <input type="text" id="m" name = "mood"> <br><br>
         <input type="submit" value = "Submit">
     </form>    
+    <script src="script.js"></script>
 </body>
 </html>
