--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
   <title>Moodify</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 </head>
 <body class="theme-default">
   <header class="app-header">
